--- a/styles/globals.css
+++ b/styles/globals.css
@@ -579,6 +579,10 @@ span.text-red {
   color: green;
   font-size: 40px;
 }
+.cancel .icon {
+  color: red;
+  font-size: 60px;
+}
 .success h2 {
   text-transform: capitalize;
   margin-top: 15px 0px;
@@ -602,7 +606,18 @@ span.text-red {
   margin: 10px;
   margin-top: 30px;
 }
+.cancel .description {
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+  margin: 10px;
+  margin-top: 30px;
+}
 .success .description .email {
+  margin-left: 5px;
+  color: #f02d34;
+}
+.cancel .description .email {
   margin-left: 5px;
   color: #f02d34;
 }
